<resources>
    <string name="app_name">Stop Collector</string>
    <string name="whitelist_name">Unknown numbers</string>
    <string name="blacklist_name">Black list</string>
    <string name="history_name">Incoming call log</string>
    <string name="title_activity_list_black">Black list</string>
    <string name="title_activity_list_white">Unknown numbers</string>
    <string name="action_delete">Delete</string>
    <string name="action_blacklist">Blacklist number</string>
    <string name="header_log">Last 10 incoming calls:</string>
    <string name="action_add">Add contact…</string>
    <string name="dialog_number">Enter phone number:</string>
    <string name="title_activity_list_log">Incoming call log</string>
    <string name="warning_unknown_ban">Use options to block private numbers.</string>
    <string name="setting_block_private">Block private</string>
    <string name="setting_block_unknown">Block unknown</string>
    <string name="setting_block_unknown_exp">Block calls from numbers not in list, except white list</string>
    <string name="setting_block_type">Blocking type…</string>
    <string name="setting_automatic_whitelist">Automatic white list</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="summary_automatic">Stores unknown numbers, and allows second call to pass through</string>
    <string name="action_clear">Clear list</string>
    <string name="action_clear_really">Do you really want to clear this list? You can\'t undo this action.</string>
    <string name="action_ban_complete">Added number to black list</string>
</resources>
